--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /JavaProgramming/nbproject/private/
 /JavaIoProgramming/nbproject/private/
 /WebApplication/nbproject/private/
+/JavaIoProgramming2/nbproject/private/
+/WebApplication/build/
