--- a/WebApplication/web/WEB-INF/web.xml
+++ b/WebApplication/web/WEB-INF/web.xml
@@ -14,14 +14,6 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
-        <url-pattern>*</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
-    <session-config>
-        <session-timeout>
-            30
-        </session-timeout>
-    </session-config>
-    <welcome-file-list>
-        <welcome-file>redirect.jsp</welcome-file>
-    </welcome-file-list>
 </web-app>
