--- a/WebApplication/nbproject/project.properties
+++ b/WebApplication/nbproject/project.properties
@@ -65,7 +65,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
@@ -75,7 +74,7 @@ run.test.classpath=\
 # Space-separated list of JVM arguments used when running a class with a main method or a unit test
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value):
 runmain.jvmargs=
-source.encoding=EUC-KR
+source.encoding=UTF-8
 source.root=src
 src.dir=${source.root}/java
 test.src.dir=test
