숙제 업로드 (그대로입력)

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /WebApplication/nbproject/private/
 /JavaIoProgramming2/nbproject/private/
 /WebApplication/build/
+/JavaHomework1/nbproject/private/
