--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /JavaIoProgramming2/nbproject/private/
 /WebApplication/build/
 /JavaHomework1/nbproject/private/
+/JavaIoProgramming/JavaHomework1/nbproject/private/
