--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@
 /RPi-LCD-JavaFXProgramming/nbproject/private/
 /RPi-LCD-JavaFXProgramming/dist/
 /RPi-LCD-JavaFXProgramming/build/
+/Hardware/nbproject/private/
+/Hardware/build/
+/Hardware/dist/
