--- a/JavaWebProgramming/WebContent/WEB-INF/web.xml
+++ b/JavaWebProgramming/WebContent/WEB-INF/web.xml
@@ -4,15 +4,35 @@
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	id="WebApp_ID" version="3.1">
 	
+	
+	<!-- ContextLoadListener등록 -->
+	<listener>
+		<listener-class>listener.ContextLoaderListener</listener-class>
+	</listener>
+	
 	<context-param>
 		<param-name>key1</param-name>
 		<param-value>value1</param-value>
 	</context-param>
 	
-	<listener>
-		<listener-class>listener.ContextLoaderListener</listener-class>
-	</listener>
 	
+	<!-- CharacterEncodingFilter 등록 및 URL매핑 -->
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	
+	
+    <!-- DispatcherServlet 등록 및 URL 매핑 -->
 	<servlet>
 		<servlet-name>dispatcher</servlet-name>
 		<servlet-class>servlet.DispatcherServlet</servlet-class>
@@ -31,7 +51,7 @@
 	
 	<servlet-mapping>
 		<servlet-name>dispatcher</servlet-name>
-		<url-pattern>/dispatcher</url-pattern>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
 </web-app>
