--- a/Hardware/nbproject/configs/Hardware.properties
+++ b/Hardware/nbproject/configs/Hardware.properties
@@ -3,5 +3,5 @@ $target.profile=profile-remote
 $target.run=run-remote
 compile.on.save.unsupported.remote.platform=true
 debug-transport=dt_socket
-main.class=test.BuzzerActiceUltraSonicSensor
+main.class=hardware.lcd.LCD1602
 platform.runtime=RPi-9-1
