--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /WebApplication/build/
 /JavaHomework1/nbproject/private/
 /JavaIoProgramming/JavaHomework1/nbproject/private/
+/JavaFxApplication/dist/
